# rpg

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APL  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
assets/: archer.glb  bolt_01.glb  fragment_xp.glb  ground_lamp_1.glb  potion_ep.glb  potion_hp.glb  potion_m_hp.glb  potion_mp.glb  rock_1.glb  swordsman.glb  wall_hedge_1.glb  waypoint.glb  wizard.glb
assets/metadata/: item.json  level.json  modifiers.json  passive_tree.json  prop.json  skill.json  stats.json  unit.json  zone.json
crates/audio_manager/: Cargo.toml
crates/audio_manager/src/: plugin.rs
crates/console_plugin/: Cargo.toml
crates/console_plugin/src/: console.rs  lib.rs  plugin.rs
crates/rpg_account/: Cargo.toml
crates/rpg_account/src/: account.rs  account_statistics.rs  character.rs  character_statistics.rs  lib.rs
crates/rpg_admin_client/: Cargo.toml
crates/rpg_admin_client/src/: client.rs  main.rs
crates/rpg_chat/: Cargo.toml
crates/rpg_chat/src/: chat.rs
crates/rpg_client/: Cargo.toml  build_windows.rs  clippy.toml
crates/rpg_client/src/: assets.rs  inspector.rs  main.rs  random.rs  state.rs  util.rs
crates/rpg_client/src/console/: command.rs
crates/rpg_client/src/game/: actions.rs  assets.rs  controls.rs  environment.rs  health_bar.rs  item.rs  metadata.rs  mod.rs  plugin.rs  skill.rs  state_saver.rs
crates/rpg_client/src/game/actor/: actor.rs  actor_internal.rs  animation.rs  mod.rs  player.rs  unit.rs  villain.rs
crates/rpg_client/src/game/passive_tree/: mod.rs  passive_tree.rs  passive_tree_internal.rs
crates/rpg_client/src/game/prop/: metadata.rs  mod.rs  prop_internal.rs
crates/rpg_client/src/game/ui/: game_over.rs  hero.rs  hud.rs  inventory.rs  menu.rs  mod.rs  pause.rs
crates/rpg_client/src/game/world/: mod.rs  room.rs  tile.rs  world_internal.rs  zone.rs
crates/rpg_client/src/game/zone/: mod.rs  room.rs  tile.rs  zone.rs
crates/rpg_client/src/loader/: plugin.rs
crates/rpg_client/src/menu/: account.rs  create.rs  credits.rs  load.rs  main.rs  mod.rs  plugin.rs  settings.rs
crates/rpg_client/src/net/: account.rs  chat.rs  game.rs  lobby.rs  mod.rs  plugin.rs
crates/rpg_client/src/splash/: mod.rs  plugin.rs
crates/rpg_client/src/ui/: chat.rs  lobby.rs  mod.rs
crates/rpg_client/src/ui/menu/: account.rs  create.rs  credits.rs  load.rs  main.rs  mod.rs  plugin.rs  settings.rs
crates/rpg_core/: Cargo.toml
crates/rpg_core/src/: class.rs  combat.rs  damage.rs  effect.rs  game_mode.rs  item.rs  item_tables.rs  level_tables.rs  lib.rs  metadata.rs  passive_tree.rs  uid.rs  unit.rs  unit_tables.rs  value.rs  villain.rs
crates/rpg_core/src/skill/: effect.rs  mod.rs  skill.rs  skill_internal.rs  skill_tables.rs
crates/rpg_core/src/stat/: mod.rs  modifier.rs  modifier_list.rs  modifier_pool.rs  modifier_tables.rs  stat_internal.rs  stat_list.rs  stat_system.rs  stat_tables.rs  value.rs
crates/rpg_core/src/storage/: equipment.rs  inventory.rs  mod.rs  storage.rs  storage_internal.rs
crates/rpg_lobby/: Cargo.toml
crates/rpg_lobby/src/: lib.rs  lobby.rs
crates/rpg_network_protocol/: Cargo.toml
crates/rpg_network_protocol/src/: lib.rs  protocol.rs
crates/rpg_server/: Cargo.toml
crates/rpg_server/src/: account.rs  assets.rs  chat.rs  game.rs  lobby.rs  main.rs  server.rs  server_state.rs  state.rs  world.rs
crates/rpg_server/src/game/: action.rs  item.rs  mod.rs  plugin.rs  skill.rs  unit.rs  villain.rs
crates/rpg_server/src/net/: account.rs  chat.rs  client.rs  context.rs  game.rs  lobby.rs  mod.rs  server.rs
crates/rpg_util/: Cargo.toml
crates/rpg_util/src/: actions.rs  item.rs  lib.rs  skill.rs  unit.rs
crates/rpg_world/: Cargo.toml
crates/rpg_world/src/: edge.rs  lib.rs  metadata.rs  neighbour.rs  position_index.rs  room.rs  tile.rs  waypoint.rs  zone.rs  zone_path.rs  zone_tables.rs
crates/ui_util/: Cargo.toml
crates/ui_util/src/: lib.rs  plugin.rs  style.rs  widgets.rs
crates/util/: Cargo.toml
crates/util/src/: cleanup.rs  fs.rs  lib.rs  math.rs  plugin.rs  random.rs
crates/util/src/assets/: json.rs
credits/: CREDITS.md
