[workspace]
resolver = "2"
members = [ "crates/util", "crates/console_plugin", "crates/audio_manager", "crates/ui_util", "crates/util", "crates/rpg_chat", "crates/rpg_lobby", "crates/rpg_account", "crates/rpg_network_protocol", "crates/rpg_util", "crates/rpg_server", "crates/rpg_world", "crates/rpg_core", "crates/rpg_client" ]

[workspace.package]
description = "A prototype of an Action RPG"
authors = [ "AxiomaticSemantics <oh@no.no>" ]
edition = "2021"
#publish = false

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"
# excessive-nesting-threshold = 8 # This does not work as intended, need to investigate further.

[workspace.dependencies.serde]
version = "1"
features = ["derive", "std"]

[workspace.dependencies.serde_derive]
version = "1"

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.petgraph]
version = "0.6"
features = ["serde-1"]

[workspace.dependencies.glam]
version = "0.25"

[profile.release]
lto = "thin"

[profile.dev]
opt-level = 'z'
debug = 1

[profile.dev.package."*"]
opt-level = 'z'
debug = 0
