[package]
resolver = "2"
name = "rpg_lobby"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Shared types and functionality for game lobbies shared between client and server"
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
rpg_account = { path = "../rpg_account" }

serde = { workspace = true }
serde_derive = { workspace = true }
