[package]
resolver = "2"
name = "rpg_network_protocol"
version = "0.1.0"
description = "A shared network protocol used by rpg_client rpg_admin_client and rpg_server"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rpg_core = { path = "../rpg_core" }
rpg_world = { path = "../rpg_world" }
rpg_account = { path = "../rpg_account" }
rpg_chat = { path = "../rpg_chat" }
rpg_lobby = { path = "../rpg_lobby" }

serde = { workspace = true }
serde_derive = { workspace = true }

[dependencies.lightyear]
git = "https://github.com/AxiomaticSemantics/lightyear"

[dependencies.bevy]
git = "https://github.com/AxiomaticSemantics/bevy"
optional = false
default-features = false
