[package]
resolver = "2"
name = "rpg_server"
version = "0.1.0"
description = "A server for rpg_client"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rpg_network_protocol = { path = "../rpg_network_protocol" }
rpg_core = { path = "../rpg_core" }
rpg_world = { path = "../rpg_world" }
util = { path = "../util" }

serde_json = { workspace = true }

clap = { version = "4.4.13", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"

[dependencies.lightyear]
git = "https://github.com/AxiomaticSemantics/lightyear"

[dependencies.bevy]
git = "https://github.com/AxiomaticSemantics/bevy"
features = [
  "bevy_asset",
  "multi-threaded",
  "dynamic_linking",
]
optional = false
default-features = false
