[package]
resolver = "2"
name = "rpg_server"
version = "0.1.0"
description = "A server for rpg_client"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rpg_network_protocol = { path = "../rpg_network_protocol" }
rpg_core = { path = "../rpg_core" }
rpg_world = { path = "../rpg_world" }
rpg_account = { path = "../rpg_account" }
rpg_lobby = { path = "../rpg_lobby" }
rpg_chat = { path = "../rpg_chat" }

# bevy plugins
rpg_util = { path = "../rpg_util" }
util = { path = "../util" }

# external dependencies
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.4.13", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }

[dependencies.lightyear]
git = "https://github.com/AxiomaticSemantics/lightyear"

[dependencies.bevy]
git = "https://github.com/AxiomaticSemantics/bevy"
features = [
  "bevy_asset",
  "multi-threaded",
]
optional = false
default-features = false
