[package]
resolver = "2"
name = "rpg_server"
version = "0.1.0"
description = "A game server for rpg_client"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[dependencies]
rpg_network_protocol = { path = "../rpg_network_protocol" }
rpg_core = { path = "../rpg_core" }
rpg_world = { path = "../rpg_world" }
rpg_account = { path = "../rpg_account" }
rpg_lobby = { path = "../rpg_lobby" }
rpg_chat = { path = "../rpg_chat" }

# bevy plugins
rpg_util = { path = "../rpg_util" }
util = { path = "../util" }

# external dependencies
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.4.13", features = ["derive"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
bevy_renet = { version = "0.0.11", git = "https://github.com/AxiomaticSemantics/renet", features = ["serde"] }
bincode = "1.3.3"

[dependencies.bevy]
version = "0.14.0-dev"
git = "https://github.com/AxiomaticSemantics/bevy"
features = [
  "bevy_asset",
  "bevy_transform",
  "multi-threaded",
]
optional = false
default-features = false
