[package]
resolver = "2"
name = "rpg_util"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
rpg_core = { path = "../rpg_core" }
rpg_world = { path = "../rpg_world" }

util = { path = "../util" }

[dependencies.bevy]
version = "0.13.0"
git = "https://github.com/AxiomaticSemantics/bevy"
features = [ ]
optional = false
default-features = false
