[package]
resolver = "2"
name = "ui_util"
version = "0.1.0"
description = "A small utility library for bevy_ui"
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies.bevy]
version = "0.13.0"
git = "https://github.com/AxiomaticSemantics/bevy"
features = [
  "bevy_asset",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_input",
  "subpixel_glyph_atlas",
]
optional = false
default-features = false
