[package]
resolver = "2"
name = "util"
version = "0.1.0"
description = "What would have been a game someday."
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.50"

[dependencies.bevy]
git = "https://github.com/AxiomaticSemantics/bevy"
features = [
  "bevy_asset",
  "dynamic_linking"
]
optional = false
default-features = false
