[package]
resolver = "2"
name = "util"
version = "0.1.0"
description = "A utility plugin used by multiple binary crates."
license = "MIT OR Apache-2.0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
fastrand = "2.0.1"
thiserror = "1.0.50"

[dependencies.bevy]
version = "0.14.0-dev"
git = "https://github.com/AxiomaticSemantics/bevy"
features = [ "bevy_asset" ]
optional = false
default-features = false
